--- a/style.css
+++ b/style.css
@@ -137,6 +137,8 @@ h1{
 
 /* ======= Global CSS Grid ======== */
 .global-grid{
+  background-color: darkslategrey;
+
   display: grid;
   height: 100vh;
   grid-gap: .5rem;
@@ -177,7 +179,7 @@ h1{
   width: 100%;
   height: 100%;
   justify-content: center;
-  background: #547e74;
+  background: #243632;
   z-index: 500;
 }
 /* ====================================== */
@@ -188,6 +190,8 @@ h1{
   color: #cfdee7;
   background: gray;
   border-radius: 1rem;
+
+  box-shadow: inset 0px 0px 5px #252525;
 
   display: grid;
 
